--- a/etc/proftpd/modules.conf
+++ b/etc/proftpd/modules.conf
@@ -25,7 +25,7 @@ LoadModule mod_sql.c
 #LoadModule mod_ldap.c
 
 #
-# 'SQLBackend mysql' or 'SQLBackend postgres' (or any other valid backend) directives 
+# 'SQLBackend mysql' or 'SQLBackend postgres' (or any other valid backend) directives
 # are required to have SQL authorization working. You can also comment out the
 # unused module here, in alternative.
 #
@@ -34,7 +34,7 @@ LoadModule mod_sql.c
 # mod_sql.c module to use this.
 LoadModule mod_sql_mysql.c
 
-# Install proftpd-mod-pgsql and decomment the previous 
+# Install proftpd-mod-pgsql and decomment the previous
 # mod_sql.c module to use this.
 #LoadModule mod_sql_postgres.c
 
@@ -46,7 +46,7 @@ LoadModule mod_sql_mysql.c
 # mod_sql.c module to use this
 #LoadModule mod_sql_odbc.c
 
-# Install one of the previous SQL backends and decomment 
+# Install one of the previous SQL backends and decomment
 # the previous mod_sql.c module to use this
 #LoadModule mod_sql_passwd.c
 
@@ -57,9 +57,9 @@ LoadModule mod_quotatab_file.c
 # Install proftpd-mod-ldap to use this
 #LoadModule mod_quotatab_ldap.c
 
-# Install one of the previous SQL backends and decomment 
+# Install one of the previous SQL backends and decomment
 # the previous mod_sql.c module to use this
-#LoadModule mod_quotatab_sql.c
+LoadModule mod_quotatab_sql.c
 LoadModule mod_quotatab_radius.c
 LoadModule mod_wrap.c
 LoadModule mod_rewrite.c
@@ -67,7 +67,7 @@ LoadModule mod_load.c
 LoadModule mod_ban.c
 LoadModule mod_wrap2.c
 LoadModule mod_wrap2_file.c
-# Install one of the previous SQL backends and decomment 
+# Install one of the previous SQL backends and decomment
 # the previous mod_sql.c module to use this
 #LoadModule mod_wrap2_sql.c
 LoadModule mod_dynmasq.c
@@ -78,31 +78,19 @@ LoadModule mod_site_misc.c
 
 LoadModule mod_sftp.c
 LoadModule mod_sftp_pam.c
-# Install one of the previous SQL backends and decomment 
+# Install one of the previous SQL backends and decomment
 # the previous mod_sql.c module to use this
-#LoadModule mod_sftp_sql.c
+LoadModule mod_sftp_sql.c
 
 LoadModule mod_facl.c
 LoadModule mod_unique_id.c
 LoadModule mod_copy.c
 LoadModule mod_deflate.c
 LoadModule mod_ifversion.c
-LoadModule mod_memcache.c
 LoadModule mod_tls_memcache.c
-
-#LoadModule mod_redis.c
-#LoadModule mod_tls_redis.c
-#LoadModule mod_wrap2_redis.c
-
-#LoadModule mod_auth_otp.c
-
-LoadModule mod_readme.c
 
 # Install proftpd-mod-geoip to use the GeoIP feature
 #LoadModule mod_geoip.c
-
-# Install proftpd-mod-snmp to use the SNMP feature
-#LoadModule mod_snmp.c
 
 # keep this module the last one
 LoadModule mod_ifsession.c
