FTP disabled to use only SFTP.

--- a/etc/proftpd/sftp.conf
+++ b/etc/proftpd/sftp.conf
@@ -1,13 +1,8 @@
 <IfModule mod_sftp.c>
-    SFTPEngine ${SFTP}
-
+    SFTPEngine on
     SFTPLog /var/log/proftpd/sftp.log
-
     SFTPHostKey /etc/ssh/ssh_host_rsa_key
-
     SFTPAuthMethods publickey password
-
     SFTPAuthorizedUserKeys file:/etc/proftpd/authorized_keys/%u
-
-    Port ${SFTP_PORT}
+    Port 21
 </IfModule>
