--- a/etc/proftpd/proftpd.conf
+++ b/etc/proftpd/proftpd.conf
@@ -8,7 +8,7 @@
 Include /etc/proftpd/modules.conf
 
 # Set off to disable IPv6 support which is annoying on IPv4 only boxes.
-UseIPv6				${USE_IP6}
+UseIPv6				off
 # If set on you can experience a longer connection delay in many cases.
 IdentLookups			off
 
@@ -38,7 +38,7 @@ DenyFilter			\*.*/
 # RequireValidShell		off
 
 # Port 21 is the standard FTP port.
-Port				${FTP_PORT}
+Port				2121
 
 # In some cases you have to specify passive ports range to by-pass
 # firewall limitations. Ephemeral ports can be used for that, but
@@ -133,9 +133,9 @@ AdminControlsEngine off
 Include /etc/proftpd/sql.conf
 
 #
-# This is used for FTPS connections
+# This is used for SFTP connections
 #
-#Include /etc/proftpd/tls.conf
+Include /etc/proftpd/sftp.conf
 
 #
 # Useful to keep VirtualHost/VirtualRoot directives separated
@@ -187,5 +187,3 @@ Include /etc/proftpd/sql.conf
 
 # Include other custom configuration files
 Include /etc/proftpd/conf.d/
-
-Include /etc/proftpd/sftp.conf
