--- a/src/etc/proftpd/proftpd.conf
+++ b/src/etc/proftpd/proftpd.conf
@@ -31,12 +31,6 @@ RequireValidShell		off
 # Port 21 is the standard FTP port.
 Port				2121
 
-# This is useful for masquerading address with dynamic IPs:
-# refresh any configured MasqueradeAddress directives every 8 hours
-<IfModule mod_dynmasq.c>
-# DynMasqRefresh 28800
-</IfModule>
-
 # To prevent DoS attacks, set the maximum number of child processes
 # to 30.  If you need to allow more than 30 concurrent connections
 # at once, simply increase this value.  Note that this ONLY works
@@ -58,38 +52,16 @@ AllowOverwrite			on
 TransferLog /var/log/proftpd/xferlog
 SystemLog   /var/log/proftpd/proftpd.log
 
-<IfModule mod_quotatab.c>
-QuotaEngine on
-</IfModule>
-
-<IfModule mod_ratio.c>
-Ratios off
-</IfModule>
-
-# Delay engine reduces impact of the so-called Timing Attack described in
-# http://www.securityfocus.com/bid/11430/discuss
-# It is on by default.
-<IfModule mod_delay.c>
-DelayEngine on
-</IfModule>
-
-<IfModule mod_ctrls.c>
-ControlsEngine        off
-ControlsMaxClients    2
-ControlsLog           /var/log/proftpd/controls.log
-ControlsInterval      5
-ControlsSocket        /var/run/proftpd/proftpd.sock
-</IfModule>
-
-<IfModule mod_ctrls_admin.c>
-AdminControlsEngine off
-</IfModule>
-
+Include /etc/proftpd/quotatab.conf
+Include /etc/proftpd/ratio.conf
+Include /etc/proftpd/delay.conf
+Include /etc/proftpd/ctrls.conf
+Include /etc/proftpd/ctrls_admin.conf
 # Alternative authentication frameworks
 Include /etc/proftpd/sql.conf
-
 # This is used for SFTP connections
 Include /etc/proftpd/sftp.conf
+Include /etc/proftpd/tls.conf
 
 # Reconnect after connection loss
 AllowStoreRestart       on
