--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Prepare ENV vars
         run: |
-          echo "VERSION=$(echo "$GITHUB_REF" | sed -e 's,.*/\(.*\),\1,')" >> $GITHUB_ENV
+          echo "REPOSITORY=$GITHUB_REPOSITORY" >> $GITHUB_ENV
           echo "VERSION=$(echo "$GITHUB_REF" | sed -e 's,.*/\(.*\),\1,')" >> $GITHUB_ENV
 
       - name: Build & Push Docker Version
