--- a/src/etc/proftpd/sftp.conf
+++ b/src/etc/proftpd/sftp.conf
@@ -1,7 +1,7 @@
 <IfModule mod_sftp.c>
-    Port 21
+    Port ${SFTP_PORT}
 
-    SFTPEngine on
+    SFTPEngine ${SFTP_ENGINE}
     SFTPAuthMethods publickey password
     SFTPAuthorizedUserKeys file:/etc/proftpd/authorized_keys/%u
     SFTPHostKey /etc/ssh/ssh_host_ecdsa_key
